--- a/FundSharer/FundSharer.csproj
+++ b/FundSharer/FundSharer.csproj
@@ -209,6 +209,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705221948489_InitialCreate.cs" />
+    <Compile Include="Migrations\201705221948489_InitialCreate.Designer.cs">
+      <DependentUpon>201705221948489_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705222059330_UpdatedBankAccountModel.cs" />
+    <Compile Include="Migrations\201705222059330_UpdatedBankAccountModel.Designer.cs">
+      <DependentUpon>201705222059330_UpdatedBankAccountModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminAccount.cs" />
     <Compile Include="Models\BankAccount.cs" />
@@ -328,6 +337,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705221948489_InitialCreate.resx">
+      <DependentUpon>201705221948489_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705222059330_UpdatedBankAccountModel.resx">
+      <DependentUpon>201705222059330_UpdatedBankAccountModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
