--- a/FundSharer/FundSharer.csproj
+++ b/FundSharer/FundSharer.csproj
@@ -255,6 +255,10 @@
     <Compile Include="Migrations\201706301243384_WaitingTicketMod.Designer.cs">
       <DependentUpon>201706301243384_WaitingTicketMod.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707021450151_AdminAccountDeprecated.cs" />
+    <Compile Include="Migrations\201707021450151_AdminAccountDeprecated.Designer.cs">
+      <DependentUpon>201707021450151_AdminAccountDeprecated.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminAccount.cs" />
@@ -296,6 +300,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\StyleSheet1.scss" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -394,6 +399,7 @@
     <Content Include="Views\Shared\_ConfirmPayment.cshtml" />
     <Content Include="Views\BankAccounts\_NewAccount.cshtml" />
     <Content Include="Views\Shared\_AdminAccountRow.cshtml" />
+    <Content Include="Views\Account\_Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -440,6 +446,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706301243384_WaitingTicketMod.resx">
       <DependentUpon>201706301243384_WaitingTicketMod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707021450151_AdminAccountDeprecated.resx">
+      <DependentUpon>201707021450151_AdminAccountDeprecated.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
