--- a/FundSharer/FundSharer.csproj
+++ b/FundSharer/FundSharer.csproj
@@ -302,7 +302,8 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <Content Include="Content\StyleSheet1.scss" />
+    <None Include="Properties\PublishProfiles\ExcElsiorr - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ExcElsiorr - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -401,6 +402,7 @@
     <Content Include="Views\BankAccounts\_NewAccount.cshtml" />
     <Content Include="Views\Shared\_AdminAccountRow.cshtml" />
     <Content Include="Views\Account\_Login.cshtml" />
+    <Content Include="Views\Shared\_Modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
