--- a/FundSharer/FundSharer.csproj
+++ b/FundSharer/FundSharer.csproj
@@ -259,6 +259,10 @@
     <Compile Include="Migrations\201707021450151_AdminAccountDeprecated.Designer.cs">
       <DependentUpon>201707021450151_AdminAccountDeprecated.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707041719504_BAcctModified.cs" />
+    <Compile Include="Migrations\201707041719504_BAcctModified.Designer.cs">
+      <DependentUpon>201707041719504_BAcctModified.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminAccount.cs" />
@@ -452,6 +456,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707021450151_AdminAccountDeprecated.resx">
       <DependentUpon>201707021450151_AdminAccountDeprecated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707041719504_BAcctModified.resx">
+      <DependentUpon>201707041719504_BAcctModified.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
