--- a/FundSharer/Web.config
+++ b/FundSharer/Web.config
@@ -25,6 +25,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   <sessionState timeout="10"></sessionState>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
